<resources>
    <string name="app_name">GHOV_DIEUVAN</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hint_user_name">Gmail</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="sign_in">Đăng Nhập</string>
    <string name="show_password">Hiển thị mật khẩu</string>
    <string name="sign_up">Đăng ký mới</string>
    <string name="help_sign_in">Help to sign in?</string>

    <string name="funtion_in_complete"> Chức năng chưa hoàn thiện</string>
    <string name="please_input_taikhoan">* Mời nhập tài khoản *</string>
    <string name="please_input_matkhau">* Mời nhập mật khẩu *</string>
    <string name="email_username">* Kiểm tra lại tài khoản *</string>
    <string name="check_internet">* Kiểm tra lại kết nối mạng *</string>
    <string name="loading_data">Đang tải dữ liệu ...</string>
    <string name="empty_str"></string>


    <string name="complete">Hoàn\nThành</string>
    <string name="forward">Chuyển\nĐơn</string>
    <string name="from">Từ : </string>
    <string name="to">Đến: </string>
    <string name="thu_ho">Thu Hộ</string>
    <string name="thuho_baogomcdv">Thu Hộ(cước dịch vụ)</string>
    <string name="money_total">Tổng thu</string>
    <string name="address">Địa chỉ: </string>
    <string name="cancel">Huỷ\nĐơn</string>
    <string name="button_huy">Huỷ</string>

    <string name="button_chiduong">Chỉ đường</string>

    <string name="thongbaonhapdudulieu">Vui lòng điền đầy đủ thông tin</string>
    <string name="thongbaoemailthieu">Vui lòng nhập gmail</string>
    <string name="thongbaoemailsai">Tài khoản gmail không chính xác</string>
    <string name="thongbaomatkhauthieu">Mật khẩu tối thiểu 6 ký tự</string>
    <string name="thongbaomatkhauchuakhop">Mật khẩu không khớp</string>

    <string name="thongbaoanhcanhanthieu">Vui lòng chọn: Ảnh cá nhân</string>
    <string name="thongbaohotenthieu">Vui lòng nhập: Họ tên</string>
    <string name="thongbaongaysinhthieu">Vui lòng nhập: Ngày sinh</string>
    <string name="thongbaocmndthieu">Vui lòng nhập: Chứng minh nhân dân</string>
    <string name="thongbaongaycapthieu">Vui lòng nhập: Ngày cấp chứng minh nhân dân</string>
    <string name="thongbaonoicapthieu">Vui lòng nhập: Nơi cấp chứng minh nhân dân</string>


    <string name="thongbaosdtthieu">Vui lòng nhập: Số điện thoại</string>
    <string name="thongbaosdtchuadung">Số điện thoại chưa đúng. Vui lòng nhập lại</string>
    <string name="thongbaodiachithieu">Vui lòng nhập: Địa chỉ</string>
    <string name="thongbaonguoilienhethieu">Vui lòng nhập: Tên người liên hệ khi cần</string>
    <string name="thongbaosdtnguoilienhethieu">Vui lòng nhập: Số điện thoại người liên hệ</string>
    <string name="thongbaosdtlienhechuadung">Số điện thoại liên hệ chưa đúng. Vui lòng nhập lại</string>


    <string name="chon_thanh_pho">Nơi Cấp</string>
    <string name="nhap_ho_va_ten">Nhập họ và tên</string>
    <string name="nhap_so_dien_thoai">Nhập số điện thoại</string>
    <string name="nhap_dia_chi">Nhập địa chỉ</string>
    <string name="thong_tin_hang_hoa"><u>THÔNG TIN HÀNG HÓA</u></string>
    <string name="khoi_luong">Khối lượng</string>
    <string name="ma_hang_hoa">Mã hàng hóa(nếu có):</string>
    <string name="ghi_chu">Ghi chú</string>
    <string name="mo_ta">Mô tả</string>
    <string name="tu5kg_den10kg">Từ 5 đến 10kg</string>
    <string name="duoi_5kg">Dưới 5kg</string>
    <string name="tu10kg_den15kg">Từ 10 đến 15kg</string>
    <string name="duoi_25cm">Dưới 25cm</string>
    <string name="tu25cm_den_40cm">Từ 25 đến 40cm</string>
    <string name="tu40cm_den_50cm">Từ 40 đến 50cm</string>
    <string name="kich_thuoc">Kích thước</string>
    <string name="nhap_ma_don_hang_neu_co">Nhập mã đơn hàng</string>
    <string name="khai_gia">Khai giá</string>
    <string name="su_dung_khai_gia">Sử dụng</string>
    <string name="khong_su_dung_khai_gia">Không sử dụng</string>
    <string name="nguoi_dung_thanh_toan_truoc">Người nhận Thanh toán trước</string>
    <string name="mo_ta_san_pham">Mô tả sản phẩm</string>
    <string name="dien_vao_neu_nguoi_dung_thanh_toan_cuoc">Điền vào nếu người dùng thanh toán cước</string>
    <string name="dong_y_voi_dieu_khoan_su_dung_dich_vu_cua_GiaoHangOngVang.vn">Tôi đã đọc và đồng ý với điều khoản sử dụng dịch vụ của Giaohangongvang.vn</string>
    <string name="tao_don">Tạo đơn</string>
    <string name="thong_tin_nguoi_nhan"><u>THÔNG TIN NGƯỜI NHẬN</u></string>
    <string name="btn_goi_nguoi_nhan">Gọi người nhận</string>
    <string name="xac_nhan">Xác nhận</string>
    <string name="sua_ghi_chu">Ghi chú</string>
    <string name="nhan_tat_ca">Nhận tất cả</string>

    <string-array name="danh_sach_thanh_pho">

        <item>--Chọn nơi cấp--</item>
        <item>An Giang</item>
        <item>Bà Rịa - Vũng Tàu</item>
        <item>Bắc Giang</item>
        <item>Bắc Kạn</item>
        <item>Bạc Liêu</item>
        <item>Bắc Ninh</item>
        <item>Bến Tre</item>
        <item>Bình Định</item>
        <item>Bình Dương</item>
        <item>Bình Phước</item>
        <item>Bình Thuận</item>
        <item>Cà Mau</item>
        <item>Cần Thơ</item>
        <item>Cao Bằng</item>
        <item>Đà Nẵng</item>
        <item>Đắk Lắk</item>
        <item>Đắk Nông</item>
        <item>Điện Biên</item>
        <item>Đồng Nai</item>
        <item>Đồng Tháp</item>
        <item>Gia Lai</item>
        <item>Hà Giang</item>
        <item>Hà Nam</item>
        <item>Hà Nội</item>
        <item>Hà Tĩnh</item>
        <item>Hải Dương</item>
        <item>Hải Phòng</item>
        <item>Hậu Giang</item>
        <item>Hồ Chí Minh</item>
        <item>Hoà Bình</item>
        <item>Hưng Yên</item>
        <item>Khánh Hòa</item>
        <item>Kiên Giang</item>
        <item>Kon Tum</item>
        <item>Lai Châu</item>
        <item>Lâm Đồng</item>
        <item>Lạng Sơn</item>
        <item>Lào Cai</item>
        <item>Long An</item>
        <item>Nam Định</item>
        <item>Nghệ An</item>
        <item>Ninh Bình</item>
        <item>Ninh Thuận</item>
        <item>Phú Thọ</item>
        <item>Phú Yên</item>
        <item>Quảng Bình</item>
        <item>Quảng Nam</item>
        <item>Quảng Ngãi</item>
        <item>Quảng Ninh</item>
        <item>Quảng Trị</item>
        <item>Sóc Trăng</item>
        <item>Sơn La</item>
        <item>Tây Ninh</item>
        <item>Thái Bình</item>
        <item>Thái Nguyên</item>
        <item>Thanh Hóa</item>
        <item>Thừa Thiên Huế</item>
        <item>Tiền Giang</item>
        <item>Trà Vinh</item>
        <item>Tuyên Quang</item>
        <item>Vĩnh Long</item>
        <item>Vĩnh Phúc</item>
        <item>Yên Bái</item>

    </string-array>
</resources>
